--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ header {
 /* about page */
 #aboutpage {
   height: 700px;
-  background: url(../images/backgrounds/profileBack.jpg) no-repeat center center/cover;
+  background: url(../images/backgrounds/profileBack) no-repeat center center/cover;
 }
 #aboutpage .containtitle {
   padding-top: 60px;
