--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ header {
 /* about page */
 #aboutpage {
   height: 700px;
-  background: url(/images/backgrounds/profileBack.jpg) no-repeat center center/cover;
+  background: url(../images/backgrounds/profileBack.jpg) no-repeat center center/cover;
 }
 #aboutpage .containtitle {
   padding-top: 60px;
@@ -164,7 +164,7 @@ header {
 }
 .icon i {
   padding: 5px;
-  margin-top: 15px;
+  margin-top: 0;
 }
 /* Projects section */
 #project {
@@ -174,7 +174,7 @@ header {
   height: 700px;
 }
 #project .project-spacing {
-  padding-top: 90px;
+  padding-top: 80px;
   margin: auto;
   max-width: 1000px;
 }
